added 2 sections + menu

--- a/index.html
+++ b/index.html
@@ -8,13 +8,74 @@
     <link href="https://fonts.googleapis.com/css2?family=Lemonada:wght@300;400;500;600;700&display=swap"
         rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/main.css">
-
 </head>
 
 <body>
+    <!-- ----------------------- section menu ----------------------- -->
+    <section class="menu">
 
-    <p>test ędward ącki ĘĘĘĘĘ ĄĄĄĄ ÓÓÓ PLĄCZĘ SIĘ ÓÓ ŹŹŹŹŹŹŹLEEEEE ŻŻŻŻŻYCIEE </p>
+        <div class="logo">
+
+            <a href="https://github.com/szymonheller" target="_blank"><i class="fab fa-github-square"></i>
+                szymonheller</a>
+
+        </div>
+
+        <nav>
+
+            <ul>
+
+                <li>
+                    <a href="index.html">home</a>
+                </li>
+
+                <li>
+                    <a href="about.html">about</a>
+                </li>
+
+                <li>
+                    <a href="#">gallery</a>
+                </li>
+
+                <li>
+                    <a href="#">contact</a>
+                </li>
+
+            </ul>
+
+        </nav>
+
+    </section>
+
+    <!-- ----------------------- section driver ----------------------- -->
+    <section class="driver">
+
+        <div class="box">
+
+            <img src="assets/img/avatar.jpg" alt="me">
+
+            <div class="first-line">
+
+                <p>I'm known as</p>
+
+            </div>
+
+            <div class="second-line" data-aos="zoom-in" data-aos-duration="1500">
+
+                <h1>Mr. Painter</h1>
+
+            </div>
+
+        </div>
+
+    </section>
+
+
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="assets/js/app.js"></script>
 
 </body>
 
