--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>title</title>
+    <title>about</title>
     <link href="https://fonts.googleapis.com/css2?family=Lemonada:wght@300;400;500;600;700&display=swap"
         rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -35,7 +35,7 @@
                 </li>
 
                 <li>
-                    <a href="#">gallery</a>
+                    <a href="gallery.html">gallery</a>
                 </li>
 
                 <li>
@@ -59,7 +59,7 @@
 
             </div>
 
-            <div class="text" data-aos="fade-up" data-aos-duration="2800">
+            <div class="text" data-aos="fade-up" data-aos-duration="2000">
 
                 <p>I'm an artist living in New York City, primarly painting and photographing.</p>
 
