--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
                 </li>
 
                 <li>
-                    <a href="#">contact</a>
+                    <a href="contact.html">contact</a>
                 </li>
 
             </ul>
@@ -59,7 +59,7 @@
 
             </div>
 
-            <div class="text" data-aos="fade-up" data-aos-duration="2000">
+            <div class="text" data-aos="fade-up" data-aos-duration="1600">
 
                 <p>I'm an artist living in New York City, primarly painting and photographing.</p>
 
