--- a/gallery.html
+++ b/gallery.html
@@ -40,7 +40,7 @@
                 </li>
 
                 <li>
-                    <a href="#">contact</a>
+                    <a href="contact.html">contact</a>
                 </li>
 
             </ul>
@@ -60,7 +60,7 @@
 
             </div>
 
-            <div class="box" data-aos="fade-up" data-aos-duration="2000">
+            <div class="box">
 
                 <div class="box-inside">
 
@@ -108,7 +108,12 @@
 
                 </div>
 
-                <p>Above you may see some of my paintings.</p>
+                <div class="text">
+
+                    <p>Above you may see some of my paintings.</p>
+
+                </div>
+
 
             </div>
 
