--- a/contact.html
+++ b/contact.html
@@ -1,19 +1,17 @@
-<!DOCTYPE html>
-<html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>mr-painter</title>
+    <title>gallery</title>
     <link href="https://fonts.googleapis.com/css2?family=Lemonada:wght@300;400;500;600;700&display=swap"
         rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <link rel="stylesheet" href="assets/css/main.css">
+    <link rel="stylesheet" href="assets/css/gallery.css">
 </head>
 
 <body>
+
     <!-- ----------------------- section menu ----------------------- -->
     <section class="menu">
 
@@ -41,7 +39,7 @@
                 </li>
 
                 <li>
-                    <a href="contact.html">contact</a>
+                    <a href="#">contact</a>
                 </li>
 
             </ul>
@@ -50,28 +48,15 @@
 
     </section>
 
-    <!-- ----------------------- section driver ----------------------- -->
-    <section class="driver">
+    <!-- ----------------------- section contact ----------------------- -->
 
-        <div class="box">
 
-            <img src="assets/img/avatar.jpg" alt="me">
 
-            <div class="first-line">
 
-                <p>I'm known as</p>
 
-            </div>
 
-            <div class="second-line" data-aos="zoom-in" data-aos-duration="1500">
 
-                <h1>Mr. Painter</h1>
 
-            </div>
-
-        </div>
-
-    </section>
 
 
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
