--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <link rel="stylesheet" href="assets/css/gallery.css">
+    <link rel="stylesheet" href="assets/css/contact.css">
 </head>
 
 <body>
@@ -39,7 +39,7 @@
                 </li>
 
                 <li>
-                    <a href="#">contact</a>
+                    <a href="contact.html">contact</a>
                 </li>
 
             </ul>
@@ -50,8 +50,10 @@
 
     <!-- ----------------------- section contact ----------------------- -->
 
+    <section class="contact">
 
 
+    </section>
 
 
 
