--- a/contact.html
+++ b/contact.html
@@ -52,6 +52,47 @@
 
     <section class="contact">
 
+        <div class="container">
+
+            <div class="section-name" data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine">
+
+                <h2>contact</h2>
+
+            </div>
+
+        </div>
+
+        <div class="boxes">
+
+            <div class="box">
+
+                <a href="#"><i class="fas fa-map-marker-alt"></i></a>
+
+                <h2>address</h2>
+
+                <p>Warsaw, 31/25 King Street</p>
+
+            </div>
+            <div class="box">
+
+                <a href="#"><i class="fas fa-shopping-cart"></i></a>
+
+                <h2>purchase</h2>
+
+                <p>See my shop</p>
+
+            </div>
+            <div class="box">
+
+                <a href="#"><i class="fas fa-palette"></i></a>
+
+                <h2>design</h2>
+
+                <p>Check out my free design ideas</p>
+
+            </div>
+
+        </div>
 
     </section>
 
