--- a/contact.html
+++ b/contact.html
@@ -94,6 +94,20 @@
 
         </div>
 
+        <div class="container">
+
+            <div class="media">
+
+                <a href="#"><i class="fab fa-facebook"></i></a>
+
+                <a href="#"><i class="fab fa-twitter-square"></i></a>
+
+                <a href="#"><i class="fab fa-linkedin"></i></a>
+
+            </div>
+
+        </div>
+
     </section>
 
 
