--- a/contact.html
+++ b/contact.html
@@ -70,7 +70,7 @@
 
                 <h2>address</h2>
 
-                <p>Warsaw, 31/25 King Street</p>
+                <p>Warsaw, 31/25 Kings Street</p>
 
             </div>
             <div class="box">
@@ -79,7 +79,7 @@
 
                 <h2>purchase</h2>
 
-                <p>See my shop</p>
+                <p>Browse through my shop</p>
 
             </div>
             <div class="box">
