--- a/contact.html
+++ b/contact.html
@@ -46,6 +46,8 @@
 
         </nav>
 
+        <!-- <button class="hamburger"></button> -->
+
     </section>
 
     <!-- ----------------------- section contact ----------------------- -->
